[Switchboard] Add ObjectPath.of util method