@@ -31,7 +31,7 @@ public class DeploymentOutputFile extends AbstractSwitchboardPath {
 
   @Override
   public ObjectPath toObjectPath() {
-    return new ObjectPath(Paths.get(user, files, file).toString());
+    return ObjectPath.of(user, files, file);
   }
 
   public String getTmp() {
